kubernetes/argocd/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  hostnames: ["argocd.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-oauth-admin
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
